refactored according student review